# photostacker

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image-utils.cpp  image-utils.h  native-lib.cpp
app/src/main/java/com/aidansun/photostacker/: BitmapHolder.kt  GalleryManager.kt  ImageDisplayActivity.kt  LicensesActivity.kt  MainActivity.kt  SettingsActivity.kt  SettingsFragment.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_image_display.xml  activity_licenses.xml  activity_main.xml  activity_settings.xml
app/src/main/res/raw/: licenses.txt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: preferences.xml
docs/: readme.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
